--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Johan-Louis Coetzee
-#logo: /assets/img/headshot_circle.png
+logo: /assets/img/Profile Foto
 #description: text below image
 #show_downloads: true
 theme: jekyll-theme-minimal
