--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Johan-Louis Coetzee
-logo: /assets/img/Profile Foto
+logo: /assets/img/Profile Foto.jpg
 #description: text below image
 #show_downloads: true
 theme: jekyll-theme-minimal
