--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 title: Johan-Louis Coetzee
 logo: /assests/img/Profile_Photo.jpg
-description: Contact information:
-- Email: yeee
+description: Contact information: - Email:
 #show_downloads: true
 theme: jekyll-theme-minimal
