--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Johan-Louis Coetzee
 logo: /assests/img/Profile_Photo.jpg
 description: Contact information
+email - haalo
 #show_downloads: true
 theme: jekyll-theme-minimal
