--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Johan-Louis Coetzee
 logo: /assests/img/Profile_Photo.jpg
-description: Contact information
+description: Contact information: Email - johan
 #show_downloads: true
 theme: jekyll-theme-minimal
