--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 title: Johan-Louis Coetzee
 logo: /assests/img/Profile_Photo.jpg
 description: |
-  **Contact Information:**
-  - Email: [johann@example.com](mailto:johann@example.com)
-  - Phone: +123456789
-  - LinkedIn: [linkedin.com/in/johan-coetzee](https://linkedin.com/in/johan-coetzee)
-  - GitHub: [github.com/johancoetzee](https://github.com/johancoetzee)
+  Contact Information:
+  Email: johann@example.com
+  Phone: +123456789
+  LinkedIn: linkedin.com/in/johan-coetzee
+  GitHub: github.com/johancoetzee
 #show_downloads: true
 theme: jekyll-theme-minimal
