--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,7 @@ title: Johan-Louis Coetzee
 logo: /assests/img/Profile_Photo.jpg
 description: |
   Contact Information:<br>
-  Email: johann@example.com<br>
-  Phone: +123456789<br>
-  LinkedIn: linkedin.com/in/johan-coetzee<br>
-  GitHub: github.com/johancoetzee
+  Email: johanlouiscoetzee2003@gmail<br>
+  LinkedIn: [LinkedIn](www.linkedin.com/in/johan-louis-coetzee-29a89a320)<br>
 #show_downloads: true
 theme: jekyll-theme-minimal
