--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Johan-Louis Coetzee
 logo: /assests/img/Profile_Photo.jpg
 description: |
   Contact Information:<br>
-  Email: johanlouiscoetzee2003@gmail<br>
-  LinkedIn: [LinkedIn](www.linkedin.com/in/johan-louis-coetzee-29a89a320)<br>
+  Email: <a href="mailto:johanlouiscoetzee2003@gmail.com">johanlouiscoetzee2003@gmail.com</a><br>
+  LinkedIn: <a href="https://www.linkedin.com/in/johan-louis-coetzee-29a89a320" target="_blank">www.linkedin.com/in/johan-louis-coetzee-29a89a320</a><br>
 #show_downloads: true
 theme: jekyll-theme-minimal
